# Anime_Recognition

./: README.md
Yolo_Recognition/: CMakeLists.txt  Resource.qrc  execute_inference.cpp  execute_inference.h  inference.cpp  inference.h  main.cpp  recognition_draw.cpp  recognition_draw.h  thread_control.cpp  thread_control.h  yolo_recognition.cpp  yolo_recognition.h
